# pthread-pagerank

./: .gitignore  CMakeLists.txt  io.c  main.c  run_data.py  utils.h
doc/: code-explanation.tex  intro.tex  preamble.tex  report.tex  results.tex
matlab/: data.mat  get_results.m  node_extractor.m  node_read.m  pagerank_demo.m  pagerankpow.m  plot_results.m  plot_time.m  portrait_print.m  stackoverflow.mat  surfer.m
